--- a/src/assets/styles/components/_modal.scss
+++ b/src/assets/styles/components/_modal.scss
@@ -148,7 +148,12 @@
   .modal {
     $this: &;
 
+    &--entered {
+      background-color: color-mix(in srgb, var(--color-11) 60%, transparent);
+    }
+
     &__container {
+      background-color: var(--color-5);
       box-shadow: none;
     }
 
