--- a/src/assets/styles/components/_table.scss
+++ b/src/assets/styles/components/_table.scss
@@ -142,7 +142,6 @@
           td {
             background-color: var(--color-6);
             border-color: var(--color-8);
-            border-bottom: none;
           }
         }
       }
