--- a/src/assets/styles/components/_tooltip.scss
+++ b/src/assets/styles/components/_tooltip.scss
@@ -116,3 +116,9 @@
   }
 }
 
+[data-theme="dark"] {
+  .tooltip {
+    --ds-tooltip-bg: var(--color-2);
+  }
+}
+
